<resources>
    <string name="app_name">session12</string>
    <string name="skip">Пропустить</string>
    <string name="onboarding1_text">Анализы</string>
    <string name="onboarding1_subtext">Экспресс сбор и получение проб</string>
    <string name="onboarding2_text">Уведомления</string>
    <string name="onboarding2_subtext">Вы быстро узнаете о результатах</string>
    <string name="onboarding3_text">Мониторинг</string>
    <string name="onboarding3_subtext">Наши врачи всегда наблюдают\nза вашими показателями здоровья</string>
    <string name="login_text">Добро пожаловать!</string>
    <string name="login_subs">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="login_input_box_email">Вход по E-mail</string>
    <string name="login_input_box_email_example">example@mail.ru</string>
    <string name="login_button_next">Далее</string>
    <string name="login_alternate_login">Или войдите с помощью</string>
    <string name="login_button_alternate_witch_yandex">Войти с Яндекс</string>
</resources>